src/types/tests/snapshots/tgbot__types__tests__business__transfer_business_account_stars.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "business_connection_id": "id",
  "star_count": 1
}
