src/types/tests/snapshots/tgbot__types__tests__business__transfer_gift-2.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "business_connection_id": "id",
  "new_owner_chat_id": 1,
  "owned_gift_id": "id",
  "star_count": 1
}
