src/types/tests/snapshots/tgbot__types__tests__business__upgrade_gift.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "business_connection_id": "id",
  "owned_gift_id": "id"
}
